# pValuation

./: .gitignore  LICENSE  README.md  pyproject.toml
MarketImpliedSurfaces/: MarketImpliedSurfaces2.ipynb  SPY_Corona_v1.ipynb
MarketImpliedSurfaces/data/: SPValueCorona.xlsx  histimpl.xls  mc_value_vs_growth_drop.csv
OilTankers/: DHT_tankers.xlsx  DHT_tankers_v2.xlsx  DHT_tankersv2.ipynb  dht_twitter_raw.pickle
ProbabilisticValuation/: ConvexDCFs.ipynb  OptionImpliedPDF.ipynb  SPY_191020exp_290920.xlsx
