[tool.poetry]
name = "pValuation"
version = "0.1.0"
description = "quantamental finance stuff"
authors = ["Robert Martin <martin.robertandrew@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "^1.21.4"
pandas = "^1.3.4"
ccxt = "^1.63.1"
tqdm = "^4.62.3"
plotly = "^5.4.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
statsmodels = "^0.10.2"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.12b0", allow-prereleases = true}
ipython = "^7.30.1"
ipykernel = "^6.6.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
